@@ -1,6 +1,6 @@
 {
     "name": "pyveganism",
-    "version": "1.1.2",
+    "version": "1.2.0",
     "title": "pY Veganism",
     "author": "tiriscef,lambdalemon",
     "contact": "tiriscef@protonmail.com",
