@@ -5,6 +5,7 @@ Date: ???
     - Non-viable Vrauk Mass now requires burlap sacks.
     - Added Auog Non-viable mass recipes
     - Non-viable Vrauk Mass recipes reworked
+    - Rebalanced Vrauk meating printing
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 2025.5.30
